Fixed spacing issue with medium screen home page (#2185).

--- a/src/theme-gcwu-fegc/sass/includes/_default-medium-screen.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-medium-screen.scss
@@ -12,24 +12,29 @@
 	}
 }
 
-#wb-body {
-	#gcwu-content {
-		width: 720px;
+%gcwu-default-medium-screen-width-half {
+	width: 48.5335%;
+}
+
+#gcwu-content {
+	width: 74.2318%;
+	float: left;
+	.span-3 {
+		@extend %gcwu-default-medium-screen-width-half;
 	}
+}
+
+#gcwu-aside {
+	width: 24%;
+	float: right;
 }
 
 #wb-body-sec {
 	#gcwu-content {
-		width: 480px;
+		@extend %gcwu-default-medium-screen-width-half;
+	}
+	#gcwu-aside {
+		@extend %gcwu-default-medium-screen-width-half;
 	}
 }
 
-%gcwu-default-medium-width-172 {
-	width: 172px;
-}
-#gcwu-aside {
-	@extend %gcwu-default-medium-width-172;
-}
-#gcwu-priorities {
-	@extend %gcwu-default-medium-width-172;
-}
